# forecast-co2-factor

./: .gitignore  CLAUDE.md  README.md  direct_model.py  indirect_model.py  inference.py  pyproject.toml
src/: data_manager.py  model_trainer.py  utils.py
tests/: test_data_manager.py  test_utils.py
tests/fixtures/: ned_last_week.csv
