[project]
name = "forecast-co2-factor"
version = "0.1.0"
description = "This repo can estimates the CO₂ factor for the next 7 days, with 1 hour resolution, based on the forecasted renewable energy production in the Netherlands."
authors = [
    {name = "Mark Hague"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "notebook (>=7.5.5,<8.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "holidays (>=0.96,<0.97)",
    "autogluon-timeseries (>=1.5.0,<2.0.0)",
    "bidict (>=0.23.1,<0.24.0)",
    "openmeteo-requests (>=1.7.5,<2.0.0)",
    "requests-cache (>=1.3.2,<2.0.0)",
    "retry-requests (>=2.0.0,<3.0.0)",
]


[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
